--- a/gb/21/10/18/n13312175.md
+++ b/gb/21/10/18/n13312175.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ixbbwc3288/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ixbbwc3288/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ixbbwc3288/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>建筑园冶奖颁奖典礼 嘉义市七件工程获肯定</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312177-522693-600x400.jpeg" />
 <h6>	美术馆，市府资料照。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2021年10月18日讯】（大纪元记者李撷璎台湾嘉义报导）受肯定的建筑是典范，高雄市建筑经营协会“<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>”团队考量疫情因素，避免得奖者跨县市移动，本届以“行动颁奖典礼”方式，2021年10月18日上午至嘉义市政府将奖座颁发给得奖者。</p>
+<p>【大纪元2021年10月18日讯】（大纪元记者李撷璎台湾嘉义报导）受肯定的建筑是典范，高雄市建筑经营协会“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>”团队考量疫情因素，避免得奖者跨县市移动，本届以“行动颁奖典礼”方式，2021年10月18日上午至嘉义市政府将奖座颁发给得奖者。</p>
 <figure id="13312178" aria-describedby="caption-13312178" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13312178-522694-450x299.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312178-522694-450x299.jpeg" alt=" 绿映水漾公园，市府资料照。" width="450" b="299" /></a><figcaption id="caption-13312178" class="wp-caption-text">绿映水漾公园，市府资料照。（嘉义市政府提供）</figcaption></figure>
-<p>嘉义市今年度有“嘉义市立美术馆”、“步行散策，乐活水岸工程”、“绿映水漾公园”、“兴安国小新建风雨球场工程”、“凤梨会社社区-市场再生学堂”等5件公共工程，以及“富域2”、“鼎峰NO3”2件民间建设案获奖，共计有7案获得<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>肯定。</p>
+<p>嘉义市今年度有“嘉义市立美术馆”、“步行散策，乐活水岸工程”、“绿映水漾公园”、“兴安国小新建风雨球场工程”、“凤梨会社社区-市场再生学堂”等5件公共工程，以及“富域2”、“鼎峰NO3”2件民间建设案获奖，共计有7案获得<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>肯定。</p>
 <figure id="13312179" aria-describedby="caption-13312179" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13312179-522695-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312179-522695-450x300.jpeg" alt=" 兴安国小风雨球场，市府资料照。" width="450" b="300" /></a><figcaption id="caption-13312179" class="wp-caption-text">兴安国小风雨球场，市府资料照。（嘉义市政府提供）</figcaption></figure>
 <p>市长黄敏惠恭喜获奖单位，各位的努力得到了肯定，让城市变得更不同。建筑园冶奖到嘉义市约10年，今年行动颁奖典礼的第一站就来到嘉义市，期望大家一起打拼，共同形塑城市美学，另外今年的年度主轴“智慧绿建筑?友善心环境”，就是永续概念以及设计思维导入城市治理，今年嘉义市主办“2021台湾设计展”，也诚挚邀请大家一起来感受这座具归属感的桃城，感受这座人文城市的城市性格及想像力量。</p>
 <figure id="13312180" aria-describedby="caption-13312180" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13312180-522696-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312180-522696-450x300.jpeg" alt="获奖合照1。" width="450" b="300" /></a><figcaption id="caption-13312180" class="wp-caption-text">获奖合照。（嘉义市政府提供）</figcaption></figure>
@@ -29,47 +29,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/5/14/n12948844.md#1">彰化县再度荣获建筑园冶奖 绩效出色</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/5/21/n12965757.md#1">融入部落文化 赛德克文化馆获建筑园冶奖</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/6/23/n13041185.md#1">石牌坑步道友善设计 获建筑园冶奖</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/7/26/n13116114.md#1">百年农塘官道埤风华再现 获建筑园冶奖</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/7/28/n13121304.md#1">发展部落文化新风貌 获2021建筑园冶奖</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/8/13/n13159947.md#1">太平兴隆社区推环境教育 蝉联建筑园冶奖</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310240.md#1">新住民携手阮剧团《筑梦趣》17日登台</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310177.md#1">五倍劵做公益起跑！云林家扶欢迎捐赠纸本券</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310181.md#1">阿里山森林电影院座无虚席 热闹上映</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310104.md#1">Q联盟心康复vs 高雄阳信女足公益赛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/14/n12948844.md#1">彰化县再度荣获建筑园冶奖 绩效出色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/21/n12965757.md#1">融入部落文化 赛德克文化馆获建筑园冶奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/23/n13041185.md#1">石牌坑步道友善设计 获建筑园冶奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/26/n13116114.md#1">百年农塘官道埤风华再现 获建筑园冶奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/28/n13121304.md#1">发展部落文化新风貌 获2021建筑园冶奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/13/n13159947.md#1">太平兴隆社区推环境教育 蝉联建筑园冶奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680578.md#1">2022年春祭 嘉市学生329青年节追思先贤烈士</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680487.md#1">办公室减废嘉eat点 享外送美食便利点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679209.md#1">111年嘉义优秀青年代表  参访嘉义县政府</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679216.md#1">嘉楠集团捐赠台大云林分院景观花园暨中型巴士</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281981.md#1" target="_blank">共产暴政录：苏俄及中共分裂外蒙古</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10129004.md#1" target="_blank">袁斌：中共早期“革命史”的真相（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/8/n13291558.md#1">【未解之谜】传奇女祭司 三千年后重回神庙</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/13/n13302112.md#1">【百年真相】“歌仙”之死 陈歌辛农场受难</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/11/n13297368.md#1">【百年真相】文革的殉难者 老舍沉湖之谜</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/4/n13281535.md#1">无神论者向神的宣战</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/14/n13305026.md#1">【未解之谜】透视千里之外 日本“千里眼之女”</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308941.md#1">【财商天下】大陆多地救市 购房补贴最高100万</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309013.md#1">【时事军事】卡梅尔在路上 梅卡瓦MK5还有多远</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309418.md#1">【横河观点】大外宣揭“610 ”？透露何信息</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13307664.md#1">【新闻看点】党报诡异捧习父子 反习势力蠢动？</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309275.md#1">普京发表北京无需武统台湾言论 引多方解读</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308259.md#1">50名中国留美学生身份被终止 面临驱逐出境</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13307478.md#1">50岁黎姿晒健身照 分享保持好身材秘笈</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13309580.md#1">对唱《玻璃心》应验 黄明志陈芳语微博被消失</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308101.md#1">《被遗忘的战役》影评：三方视角 营造战火下的人性光辉</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310847.md#1">黄渤在网上做智商测试题 被骗钱后才恍然大悟</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310371.md#1">李玖哲告假节目陪爱妻 江宏杰代班变胖称职灾</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308939.md#1">维生素B群前3名食物大公开 有些你常常吃</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/13/n13302651.md#1">哈佛80年研究 揭开长寿一大秘诀</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/14/n13304767.md#1">疲劳、睡不饱有5大原因！中医消疲劳有方法</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308389.md#1">【健康1+1】辉瑞BNT疫苗真有胚胎细胞吗？</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310072.md#1">三文鱼烹煮时溢出白色物质 用这办法可去掉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674994.md#1">【财商天下】普京出险招 欧盟如何应对</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675351.md#1">【横河观点】乌克兰抗俄给台湾的借鉴与启示</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675602.md#1">砸60万装修餐厅 《营业中》开播吸引粉丝前来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ixbbwc3288/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ixbbwc3288/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13312175.htm">建筑园冶奖颁奖典礼 嘉义市七件工程获肯定</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13312175.htm">建筑园冶奖颁奖典礼 嘉义市七件工程获肯定</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/18/n13312175.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ixbbwc3288/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ixbbwc3288/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/18/n13312175.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
